update pom to suppress native access warning

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>org.openjfx.javafxmavenarchetypes.HelloApplication</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
